# orbit

./: .claude.json  .gitignore  .orbitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  RELEASING.md  deny.toml  execute_loop.sh  install.sh
crates/orbit-cli/: CLAUDE.md  Cargo.toml
crates/orbit-cli/assets/dashboard/: app.js  index.html
crates/orbit-cli/src/: audit_middleware.rs  main.rs  parse.rs
crates/orbit-cli/src/command/: activity.rs  adr.rs  apply.rs  artifacts.rs  describe.rs  docs.rs  duel.rs  executor.rs  friction.rs  get.rs  graph.rs  init.rs  job.rs  job_run_support.rs  knowledge.rs  logs.rs  mod.rs  policy.rs  reconcile.rs  run.rs  search.rs  semantic.rs  ship.rs  task.rs  tool.rs  web.rs  workspace.rs
crates/orbit-cli/src/command/activity/: command.rs  list.rs  mod.rs
crates/orbit-cli/src/command/audit/: command.rs  export.rs  list.rs  mod.rs  prune.rs  show.rs  stats.rs  support.rs
crates/orbit-cli/src/command/config/: command.rs  mod.rs  show.rs
crates/orbit-cli/src/command/definitions/: job.rs  mod.rs  tool.rs
crates/orbit-cli/src/command/environment/: init.rs  mod.rs  workspace.rs
crates/orbit-cli/src/command/executor/: command.rs  list.rs  mod.rs  show.rs  support.rs
crates/orbit-cli/src/command/graph/: build.rs  command.rs  history.rs  mod.rs  search.rs  show.rs  support.rs  update.rs
crates/orbit-cli/src/command/hook/: command.rs  install.rs  mod.rs  pretooluse.rs  render.rs
crates/orbit-cli/src/output/: json.rs  table.rs
crates/orbit-cli/src/tests/: audit_middleware.rs  mod.rs
crates/orbit-cli/tests/: docs.rs  hook_install.rs  hook_pretooluse.rs  learning.rs  semantic_companion.rs  task_tags.rs  tool_list.rs  worktree_resolution.rs
crates/orbit-graph/: Cargo.toml
crates/orbit-graph-cli/: Cargo.toml
crates/orbit-graph-cli/src/: lib.rs  main.rs
crates/orbit-graph-cli/src/commands/: callees.rs  clean.rs  db_path.rs  deps.rs  impact.rs  implementors.rs  mod.rs  overview.rs  refs.rs  search.rs  show.rs  sync.rs  trace.rs  version.rs
crates/orbit-graph-cli/tests/: subcommands.rs
crates/orbit-graph-extract/: Cargo.toml
crates/orbit-graph-extract/src/: extracted.rs  lib.rs  selector.rs
crates/orbit-graph-extract/src/languages/: c.rs  common.rs  config.rs  csharp.rs  go.rs  java.rs  javascript.rs  js_ts.rs  kotlin.rs  markdown.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/orbit-graph-extract/src/tests/: selector.rs
crates/orbit-graph/src/: backend.rs  lib.rs
crates/orbit-graph/src/query/: callees.rs  deps.rs  impact.rs  implementors.rs  mod.rs  overview.rs  refs.rs  search.rs  show.rs  trace.rs
crates/orbit-graph/src/store/: mod.rs  schema.rs
crates/orbit-graph/src/sync/: mod.rs  pass1.rs  pass2.rs  scanner.rs  watcher.rs
crates/orbit-graph/src/tests/: backend.rs  lib.rs  mod.rs
crates/orbit-knowledge/: Cargo.toml  README.md
crates/orbit-knowledge/examples/: graph_build.rs
crates/orbit-knowledge/src/: error.rs  graph_bench.rs  lib.rs  lock.rs  selector.rs  store.rs  task_id_pattern.rs
crates/orbit-knowledge/src/commands/: callers.rs  implementors.rs  mod.rs  overview.rs  pack.rs  refs.rs  search.rs  search.rs-e  show.rs  write.rs
crates/orbit-knowledge/src/extract/: c.rs  common.rs  config.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  language.rs  markdown.rs  mod.rs  python.rs  ruby.rs  rust.rs  table.rs  typescript.rs
crates/orbit-knowledge/src/graph/: call_extraction.rs  mod.rs  navigator.rs  nodes.rs  object_store.rs  source_match.rs  sqlite_index.rs
crates/orbit-knowledge/src/metrics/: ingest.rs  ingest_tests.rs  mod.rs
crates/orbit-knowledge/src/pipeline/: attribute.rs  build.rs  context.rs  hash.rs  history.rs  mod.rs  persist.rs  scan.rs
crates/orbit-knowledge/src/service/: callers.rs  context.rs  history.rs  implementors.rs  lineage.rs  mod.rs  overview.rs  search.rs  selectors.rs  task_graph.rs  types.rs
crates/orbit-knowledge/src/store/: graph_io.rs  history_query.rs  leaf_data.rs  object_cache.rs  open.rs  pack.rs  task_state.rs  types.rs
crates/orbit-knowledge/src/tests/: error.rs  graph_bench.rs  lock.rs  mod.rs
crates/orbit-knowledge/src/workflows/: observe.rs
crates/orbit-knowledge/src/working_graph/: mod.rs  model.rs  ops.rs  rewrite.rs  versioning.rs
crates/orbit-knowledge/tests/: branch_refs.rs  graph_bench.rs  identity_key_durability.rs  orbitignore.rs  rust_exports.rs  store_cache.rs  task_history.rs  typescript.rs
crates/orbit-mcp/: Cargo.toml
crates/orbit-mcp/src/: adapter.rs  error.rs  lib.rs
crates/orbit-mcp/src/adapter/: dispatch.rs  graph.rs  learning_sidecar.rs  mod.rs  name_map.rs  schema.rs  structured.rs  test_support.rs
crates/orbit-registry/: Cargo.toml
crates/orbit-registry/src/: error.rs  lib.rs
crates/orbit-registry/src/transport/: mod.rs
crates/orbit-registry/tests/: dep_boundary.rs
crates/orbit-search/: Cargo.toml
crates/orbit-search/src/: companion.rs  embedder.rs  lib.rs  noop.rs
crates/orbit-search/src/commands/: adr_index.rs  adr_search.rs  doc_index.rs  doc_search.rs  install.rs  learning_index.rs  learning_search.rs  mod.rs  reindex.rs  related.rs  search.rs
crates/orbit-search/src/lexical/: docs.rs  mod.rs
crates/orbit-search/src/tests/: embedder.rs  mod.rs  noop.rs
crates/orbit-search/src/vector/: adr_fields.rs  chunker.rs  doc_fields.rs  learning_fields.rs  mod.rs  task_fields.rs
crates/orbit-tools/: Cargo.toml
crates/orbit-tools/src/: graph.rs  lib.rs  registry.rs
crates/orbit-tools/src/knowledge/: mod.rs  working_graph.rs
crates/orbit-tools/tests/: graph_tool_schema_size.rs  graph_tool_surface.rs  policy_deny_tracing.rs  proc_spawn_lockdown.rs  public_tool_surface.rs
tools/graph-equiv/: Cargo.toml  README.md
tools/graph-equiv/corpus/: go.txt  python.txt  rust.txt  typescript.txt
tools/graph-equiv/fixtures/go/: sample.go
tools/graph-equiv/fixtures/python/: sample.py
tools/graph-equiv/fixtures/rust/: sample.rs
tools/graph-equiv/fixtures/typescript/: sample.ts
tools/graph-equiv/src/: backend.rs  main.rs
(+3025 files in other folders)
