[workspace]
members = [
  "crates/orbit-agent",
  "crates/orbit-cli",
  "crates/orbit-common",
  "crates/orbit-search",
  "crates/orbit-search-companion",
  "crates/orbit-registry",
  "crates/orbit-core",
  "crates/orbit-engine",
  "crates/orbit-graph",
  "crates/orbit-graph-cli",
  "crates/orbit-graph-extract",
  "crates/orbit-knowledge",
  "crates/orbit-store",
  "crates/orbit-policy",
  "crates/orbit-exec",
  "crates/orbit-tools",
  "crates/orbit-mcp",
  "crates/orbit-dashboard",
  "tools/graph-equiv",
]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "MIT"

# Workspace-wide lint config. Each crate opts in via `[lints] workspace = true`.
# Keep this list short — only rules that are mechanically true everywhere.
[workspace.lints.clippy]
await_holding_lock = "deny"
dbg_macro = "deny"
expect_used = "warn"
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.dependencies]
assert_cmd = "2"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
futures-core = "0.3"
git2 = { version = "0.20", default-features = false }
ignore = "0.4.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
jsonschema = { version = "0.18", default-features = false }
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
blake3 = "1"
rayon = "1.12.0"
sha2 = "0.10"
tiktoken-rs = "0.11.0"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-normalization = "0.1"
url = "2"
wait-timeout = "0.2"
proptest = "1"
predicates = "3"
tempfile = "3"
tree-sitter = "0.26"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23.2"
