[package]
name = "orbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
colored = "2"
comfy-table = "7"
csv = "1"
orbit-common = { path = "../orbit-common" }
orbit-core = { path = "../orbit-core", features = ["clap"] }
orbit-mcp = { path = "../orbit-mcp" }
orbit-dashboard = { path = "../orbit-dashboard" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
toml.workspace = true
tower = { version = "0.5", features = ["util"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
