[package]
name = "orbit-graph-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-rust.workspace = true
toml.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
