[package]
name = "orbit-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
git2.workspace = true
orbit-graph-extract = { path = "../orbit-graph-extract" }
rusqlite.workspace = true
