[package]
name = "orbit-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
blake3.workspace = true
fs2.workspace = true
git2.workspace = true
ignore.workspace = true
orbit-graph-extract = { path = "../orbit-graph-extract" }
rayon.workspace = true
rusqlite.workspace = true
serde.workspace = true
tracing.workspace = true
