[package]
name = "orbit-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
orbit-common = { path = "../orbit-common" }
orbit-graph = { path = "../orbit-graph" }
orbit-graph-extract = { path = "../orbit-graph-extract" }
rmcp = { version = "1.5", default-features = false, features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
