[package]
name = "orbit-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "experimental"

[lints]
workspace = true

[features]
default = []

[dependencies]
orbit-common = { path = "../orbit-common" }

[dev-dependencies]
toml.workspace = true
