[package]
name = "orbit-search"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
libc.workspace = true
orbit-common = { path = "../orbit-common" }
reqwest.workspace = true
rsa.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
