[package]
name = "orbit-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
orbit-exec = { path = "../orbit-exec" }
orbit-graph = { path = "../orbit-graph" }
orbit-graph-extract = { path = "../orbit-graph-extract" }
orbit-knowledge = { path = "../orbit-knowledge" }
orbit-policy = { path = "../orbit-policy" }
orbit-common = { path = "../orbit-common" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile = "3"
tracing-subscriber.workspace = true
