[package]
name = "graph-equiv"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
orbit-knowledge = { path = "../../crates/orbit-knowledge" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
